2002-05-16  Mo DeJong  <supermo@bayarea.net>

	* mkdist.sh: Add script to create source
	distribution archives.

2002-05-09  Mo DeJong  <supermo@bayarea.net>

	* INSTALL.TXT: Minor wording change. Tell folks to
	add -nologo flag to VC++ CFLAGS.
	* MAINTAINERS: Syd has resigned as a maintainer,
	remove him and update Ian's email address.
	* Makefile.am: Remove install/ from SUBDIRS. Add
	README.TXT INSTALL.TXT to list of file that get
	included by the `make dist` target.
	* Makefile.in: Regen.
	* README.TXT: Update info and URLs to account for
	change of project hosting location. Added readme
	contents from the outdated install/README.TXT.
	* install/Makefile.am: Remove.
	* install/Makefile.in: Remove.
	* install/README.JAPAN.TXT: Remove.
	* install/README.TXT: Remove.

2002-05-06  Mo DeJong  <supermo@bayarea.net>

	* etc/english.txt.in: Add ButtonDismiss and
	ErrorOccured strings.	
	* gui/bugreport.tcl (display_bug_report): Add a
	new method to replace mail_send_bug_report. This
	error handler simply displays bug information in
	a text box instead of sending an email to the
	cygnus support email address.
	* gui/sninit.tcl: Call display_bug_report instead
	of mail_send_bug_report and avoid the initial
	bug report dialog.
	* gui/tclIndex: Regen to account for addition of
	the display_bug_report procedure.

2002-05-06  Mo DeJong  <supermo@bayarea.net>

	* gui/targetedit.tcl (cb_add_lib): Change tk_getOpenFile
	call to Editor&::FileDialog so that the same file selection
	dialog is used throughout the target editor dialog.

2002-05-02  Mo DeJong  <supermo@bayarea.net>

	* gui/targetedit.tcl: Remove hack at top of file
	that sources combobox.tcl. This is not needed
	since this procedure is auto-loaded from libgui.
	This command has become broken because the
	.../share/cygnus install directory in libgui was
	renamed to .../share/redhat recently.

2002-04-29  Mo DeJong  <supermo@bayarea.net>

	* configure: Regen.
	* configure.in: Bump version to 5.1.0.
